# dqtorch

./: .gitignore  README.md  examples.py  pyproject.toml  requirements.txt  setup.py  test_speed.py
dqtorch/: backend.py  dqtorch.py  quaternion_cuda.py
dqtorch/src/: bindings.cpp  quaternion.cu  quaternion.h
