[build-system]
requires      = ["setuptools>=75.6.0", "wheel>=0.45.1", "ninja>=1.11.1.2"]
build-backend = "setuptools.build_meta"

[project]
name            = "dqtorch"
version         = "0.1.0"
description     = "A faster pytorch library for (dual) quaternion batched operations."
authors         = [{ name = "Chaoyang Wang" }, { name = "Marisha Norcross" }]
license         = { text = "MIT" }
requires-python = ">=3.12"
dependencies    = ["torch==2.5.1+cu124", "ninja>=1.11.1.2"]

[project.urls]
Homepage      = "https://github.com/Wirlocke/dqtorch"
Documentation = "https://github.com/Wirlocke/dqtorch#readme"
